@@ -15,3 +15,4 @@
     setup.py and get tinypy up to -std=c89 spec
 * cleaned up encode.py so that registers are no longer leaked
     added assert after each frame to check that this is the case
+* applied patch by KK to improve tinypy/tests.py feedback
